--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,20 @@ author: 祭零小白
 language: zh-CN
 timezone: ''
 
+##Sitemap
+sitemap:
+  path: sitemap.xml
+  template: ./sitemap_template.xml
+
+##Baidusitemap
+baidusitemap:
+  path: baidusitemap.xml
+
+
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://example.com
-permalink: posts/:id/
+permalink: :year-:month-:day/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
