--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "hexo generate",
+    "build": "hexo clean && hexo generate && node talk-auto-init.js",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server"
@@ -12,12 +12,15 @@
     "version": "6.0.0"
   },
   "dependencies": {
+    "blueimp-md5": "^2.19.0",
+    "cheerio": "^1.0.0-rc.10",
     "g": "^2.0.1",
     "hexo": "^6.0.0",
     "hexo-admin": "^2.3.0",
     "hexo-cli": "^4.3.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
@@ -29,6 +32,11 @@
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
     "hexo-theme-fluid": "^1.8.13",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "md5": "^2.3.0",
+    "moment": "^2.29.1",
+    "request": "^2.88.2",
+    "xml-parser": "^1.2.1",
+    "yamljs": "^0.3.0"
   }
 }
